Fixed some paths in create ants

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -250,98 +250,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18021c5a",
+   "execution_count": 2,
+   "id": "4c7c9070",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc_com = np.array([1.119232944161371051e+04,3.845036998545344431e+03,4.365074759237448234e+03])\n",
-    "scale = np.array([0.452, 0.452, 20])\n",
-    "from_disk = sc_com/scale\n",
-    "print(from_disk)\n",
-    "from_program = np.array([24818.103954839404, 8748.195805110985, 222.0769230769231])\n",
-    "from_disk - from_program"
+    "def ants_3d_to_scipy_2d(affine_3d, plane='axial', slice_index=0):\n",
+    "    \"\"\"\n",
+    "    Convert a 3D ANTs affine transformation matrix to a 2D affine transform\n",
+    "    suitable for scipy.ndimage.affine_transform.\n",
+    "\n",
+    "    Parameters:\n",
+    "        affine_3d (np.ndarray): A 4x4 affine matrix from ANTs.\n",
+    "        plane (str): Plane to slice through ('axial', 'coronal', 'sagittal').\n",
+    "        slice_index (int): Index of the slice in the chosen plane.\n",
+    "\n",
+    "    Returns:\n",
+    "        matrix_2d (np.ndarray): 2x2 affine transformation matrix.\n",
+    "        offset_2d (np.ndarray): Length-2 offset vector.\n",
+    "    \"\"\"\n",
+    "    if affine_3d.shape != (4, 4):\n",
+    "        raise ValueError(\"Expected a 4x4 affine transformation matrix.\")\n",
+    "\n",
+    "    # Extract rotation+scaling and translation components\n",
+    "    rotation_scaling = affine_3d[:3, :3]\n",
+    "    translation = affine_3d[:3, 3]\n",
+    "\n",
+    "    if plane == 'axial':\n",
+    "        matrix_2d = rotation_scaling[:2, :2]\n",
+    "        offset_2d = translation[:2] + rotation_scaling[:2, 2] * slice_index\n",
+    "    elif plane == 'coronal':\n",
+    "        matrix_2d = rotation_scaling[[0,2], :][:, [0,2]]\n",
+    "        offset_2d = translation[[0,2]] + rotation_scaling[[0,2], 1] * slice_index\n",
+    "    elif plane == 'sagittal':\n",
+    "        matrix_2d = rotation_scaling[1:3, 1:3]\n",
+    "        offset_2d = translation[1:3] + rotation_scaling[1:3, 0] * slice_index\n",
+    "    else:\n",
+    "        raise ValueError(\"Plane must be 'axial', 'coronal', or 'sagittal'.\")\n",
+    "\n",
+    "    return matrix_2d, offset_2d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d587cc5f",
+   "execution_count": 24,
+   "id": "466787aa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uint16 (1140, 1000, 1820)\n"
+      "[[ 1.16274428e+00  3.12079284e-02  2.92106587e-02  3.34005126e+01]\n",
+      " [-4.75486368e-02  8.37192953e-01  4.95907180e-02 -4.78149320e+01]\n",
+      " [-2.93970052e-02 -1.04537934e-01  1.05215967e+00  3.10440149e+01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "reg_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen'\n",
-    "allenpath = os.path.join(reg_path, 'Allen_10um_sagittal_padded.tif')\n",
-    "allen_arr = read_image(allenpath)\n",
-    "print(allen_arr.dtype, allen_arr.shape)"
+    "lps2ras = np.diag([-1, -1, 1])\n",
+    "rotlist = [1.1627442836761475,\n",
+    "           0.03120792843401432,\n",
+    "           -0.029210658743977547,\n",
+    "           -0.04754863679409027,\n",
+    "           0.837192952632904,\n",
+    "           -0.04959071800112724,\n",
+    "           0.02939700521528721,\n",
+    "           0.10453793406486511,\n",
+    "           1.0521596670150757,\n",
+    "           17.72359275817871,\n",
+    "           -36.36167526245117,\n",
+    "           94.990234375]\n",
+    "# Sample ANTs affine\n",
+    "rot = np.array([rotlist[:9]]).reshape(3,3)\n",
+    "trans = rotlist[9:]\n",
+    "#offset = [355.5, 258.7953796386719, 506.93670654296875]\n",
+    "offset = [355.5, 258.7953796386719, 506.93670654296875]\n",
+    "r_trans = (np.dot(rot, offset) - offset - trans).T * [1, 1, -1]\n",
+    "affine_ants = np.eye(4)\n",
+    "affine_ants[0:3, 3] = r_trans\n",
+    "affine_ants[:3, :3] = np.dot(np.dot(lps2ras, rot), lps2ras)\n",
+    "\n",
+    "print(affine_ants)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d059fb8a",
+   "execution_count": 23,
+   "id": "2ff9ef8c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "change_z=5.0 change_y=5.555555555555555 change_x=5.555555555555555\n"
+      "[[1. 0.]\n",
+      " [0. 1.]]\n",
+      "[-47.81493201  31.04401488]\n"
      ]
     }
    ],
    "source": [
-    "change_z = 10/2\n",
-    "change_y = 10/1.8\n",
-    "change_x = 10/1.8\n",
-    "change = (change_z, change_y, change_x)\n",
-    "print(f'change_z={change_z} change_y={change_y} change_x={change_x}')"
+    "matrix, offset = ants_3d_to_scipy_2d(affine_ants, plane='sagittal', slice_index=0)\n",
+    "print(matrix)\n",
+    "print(offset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a987feaf",
+   "execution_count": 21,
+   "id": "cfb9d3dc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 596. GiB for an array with shape (5700, 5556, 10111) and data type uint16",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mndimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m zoom\n\u001b[0;32m----> 2\u001b[0m zoomed \u001b[38;5;241m=\u001b[39m \u001b[43mzoom\u001b[49m\u001b[43m(\u001b[49m\u001b[43mallen_arr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchange\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(zoomed\u001b[38;5;241m.\u001b[39mdtype, zoomed\u001b[38;5;241m.\u001b[39mshape)\n",
-      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/scipy/ndimage/_interpolation.py:774\u001b[0m, in \u001b[0;36mzoom\u001b[0;34m(input, zoom, output, order, mode, cval, prefilter, grid_mode)\u001b[0m\n\u001b[1;32m    771\u001b[0m output_shape \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\n\u001b[1;32m    772\u001b[0m         [\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mround\u001b[39m(ii \u001b[38;5;241m*\u001b[39m jj)) \u001b[38;5;28;01mfor\u001b[39;00m ii, jj \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39mshape, zoom)])\n\u001b[1;32m    773\u001b[0m complex_output \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39miscomplexobj(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m--> 774\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43m_ni_support\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moutput_shape\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    775\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mcomplex_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcomplex_output\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    776\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m complex_output:\n\u001b[1;32m    777\u001b[0m     \u001b[38;5;66;03m# import under different name to avoid confusion with zoom parameter\u001b[39;00m\n\u001b[1;32m    778\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mndimage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_interpolation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m zoom \u001b[38;5;28;01mas\u001b[39;00m _zoom\n",
-      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/scipy/ndimage/_ni_support.py:78\u001b[0m, in \u001b[0;36m_get_output\u001b[0;34m(output, input, shape, complex_output)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m output \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m complex_output:\n\u001b[0;32m---> 78\u001b[0m         output \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     80\u001b[0m         complex_type \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mpromote_types(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39mdtype, numpy\u001b[38;5;241m.\u001b[39mcomplex64)\n",
-      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 596. GiB for an array with shape (5700, 5556, 10111) and data type uint16"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  8.39948987 -42.97939495]\n"
      ]
     }
    ],
    "source": [
-    "from scipy.ndimage import zoom\n",
-    "zoomed = zoom(allen_arr, change)\n",
-    "print(zoomed.dtype, zoomed.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "141d2191",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outpath = os.path.join(reg_path, 'Allen_8x7.2x7.2um_sagittal.tif')\n",
-    "write_image(outpath, zoomed)"
+    "center = offset[0:2]\n",
+    "tx = trans[0]\n",
+    "ty = trans[1]\n",
+    "R = matrix\n",
+    "shift = center + (float(tx), float(ty)) - np.dot(R, center)\n",
+    "#print(center)\n",
+    "print(shift)"
    ]
   }
  ],
