Trying on 1st downsample=1

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c7c9070",
+   "id": "aab7e5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,40 +293,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "466787aa",
+   "execution_count": 25,
+   "id": "9b5f8db9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.16274428e+00  3.12079284e-02  2.92106587e-02  3.34005126e+01]\n",
-      " [-4.75486368e-02  8.37192953e-01  4.95907180e-02 -4.78149320e+01]\n",
-      " [-2.93970052e-02 -1.04537934e-01  1.05215967e+00  3.10440149e+01]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
+      "[[ 0.98801756  0.02374635 -0.03642566  0.4745303 ]\n",
+      " [-0.02280475  0.9946726   0.06427754  0.12320134]\n",
+      " [ 0.0456006  -0.04618119  1.00449967  1.62242199]\n",
+      " [ 0.          0.          0.          1.        ]]\n"
      ]
     }
    ],
    "source": [
     "lps2ras = np.diag([-1, -1, 1])\n",
-    "rotlist = [1.1627442836761475,\n",
-    "           0.03120792843401432,\n",
-    "           -0.029210658743977547,\n",
-    "           -0.04754863679409027,\n",
-    "           0.837192952632904,\n",
-    "           -0.04959071800112724,\n",
-    "           0.02939700521528721,\n",
-    "           0.10453793406486511,\n",
-    "           1.0521596670150757,\n",
-    "           17.72359275817871,\n",
-    "           -36.36167526245117,\n",
-    "           94.990234375]\n",
+    "rotlist = [0.9880175590515137,\n",
+    "           0.023746350780129433,\n",
+    "           0.03642565757036209,\n",
+    "           -0.02280474826693535,\n",
+    "           0.9946725964546204,\n",
+    "           -0.0642775446176529,\n",
+    "           -0.04560060426592827,\n",
+    "           0.046181194484233856,\n",
+    "           1.0044996738433838,\n",
+    "           -0.5116851329803467,\n",
+    "           -0.03886443376541138,\n",
+    "           1.6846044063568115]\n",
     "# Sample ANTs affine\n",
     "rot = np.array([rotlist[:9]]).reshape(3,3)\n",
     "trans = rotlist[9:]\n",
     "#offset = [355.5, 258.7953796386719, 506.93670654296875]\n",
-    "offset = [355.5, 258.7953796386719, 506.93670654296875]\n",
+    "offset = [5.681518077850342, 7.340097427368164, -3.9361515045166016]\n",
     "r_trans = (np.dot(rot, offset) - offset - trans).T * [1, 1, -1]\n",
     "affine_ants = np.eye(4)\n",
     "affine_ants[0:3, 3] = r_trans\n",
@@ -337,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2ff9ef8c",
+   "execution_count": 26,
+   "id": "726695e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 0.]\n",
-      " [0. 1.]]\n",
-      "[-47.81493201  31.04401488]\n"
+      "[[ 0.9946726   0.06427754]\n",
+      " [-0.04618119  1.00449967]]\n",
+      "[0.12320134 1.62242199]\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cfb9d3dc",
+   "id": "6f405173",
    "metadata": {},
    "outputs": [
     {
