Updating create atlas

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "116fa24e",
    "metadata": {},
    "outputs": [
@@ -35,6 +35,7 @@
     "from IPython.display import HTML\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import affine_transform\n",
+    "from skimage import measure\n",
     "import SimpleITK as sitk\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -250,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8491b301",
+   "execution_count": 33,
+   "id": "372e2c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,93 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "ddd24702",
+   "execution_count": null,
+   "id": "d314a763",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.98801756  0.02374635 -0.03642566  0.4745303 ]\n",
-      " [-0.02280475  0.9946726   0.06427754  0.12320134]\n",
-      " [ 0.0456006  -0.04618119  1.00449967  1.62242199]\n",
-      " [ 0.          0.          0.          1.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "lps2ras = np.diag([-1, -1, 1])\n",
-    "rotlist = [0.9880175590515137,\n",
-    "           0.023746350780129433,\n",
-    "           0.03642565757036209,\n",
-    "           -0.02280474826693535,\n",
-    "           0.9946725964546204,\n",
-    "           -0.0642775446176529,\n",
-    "           -0.04560060426592827,\n",
-    "           0.046181194484233856,\n",
-    "           1.0044996738433838,\n",
-    "           -0.5116851329803467,\n",
-    "           -0.03886443376541138,\n",
-    "           1.6846044063568115]\n",
-    "# Sample ANTs affine\n",
-    "rot = np.array([rotlist[:9]]).reshape(3,3)\n",
-    "trans = rotlist[9:]\n",
-    "#offset = [355.5, 258.7953796386719, 506.93670654296875]\n",
-    "offset = [5.681518077850342, 7.340097427368164, -3.9361515045166016]\n",
-    "r_trans = (np.dot(rot, offset) - offset - trans).T * [1, 1, -1]\n",
-    "affine_ants = np.eye(4)\n",
-    "affine_ants[0:3, 3] = r_trans\n",
-    "affine_ants[:3, :3] = np.dot(np.dot(lps2ras, rot), lps2ras)\n",
-    "\n",
-    "print(affine_ants)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "64b87078",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.9946726   0.06427754]\n",
-      " [-0.04618119  1.00449967]]\n",
-      "[0.12320134 1.62242199]\n"
-     ]
-    }
-   ],
-   "source": [
-    "matrix, offset = ants_3d_to_scipy_2d(affine_ants, plane='sagittal', slice_index=0)\n",
-    "print(matrix)\n",
-    "print(offset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "ba505015",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  8.39948987 -42.97939495]\n"
-     ]
-    }
-   ],
-   "source": [
-    "center = offset[0:2]\n",
-    "tx = trans[0]\n",
-    "ty = trans[1]\n",
-    "R = matrix\n",
-    "shift = center + (float(tx), float(ty)) - np.dot(R, center)\n",
-    "#print(center)\n",
-    "print(shift)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
