Adding more itk stuff to registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -146,44 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "7a45eb54",
+   "execution_count": 112,
+   "id": "fe7e91b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Affine Matrix in SAR (RAS) orientation:\n",
-      "[[ 9.41498876e-01  1.92020759e-01 -8.78667161e-02  2.87573332e+02]\n",
-      " [-1.98630229e-01  7.81607985e-01  1.53252296e-02  3.68410138e+02]\n",
-      " [ 6.24373257e-02  8.88035167e-04  8.62201512e-01 -1.06157243e+02]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.io import loadmat\n",
     "reg_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'\n",
     "transform_file = 'MD594_Allen_10.0x10.0x10.0um_sagittal_to_Allen.mat'\n",
     "transform_path = os.path.join(reg_path, moving_name, transform_file)\n",
     "transform = sitk.ReadTransform(transform_path)\n",
-    "#transform = sitk.AffineTransform(transform)\n",
-    "transfo_dict = loadmat(transform_path)\n",
-    "lps2ras = np.diag([-1, -1, 1])\n",
-    "rot = transfo_dict['AffineTransform_float_3_3'][0:9].reshape((3, 3))\n",
-    "trans = transfo_dict['AffineTransform_float_3_3'][9:12]\n",
-    "offset = transfo_dict['fixed']\n",
-    "r_trans = (np.dot(rot, offset) - offset - trans).T * [1, 1, -1]\n",
-    "affine_matrix = np.eye(4)\n",
-    "affine_matrix[0:3, 3] = r_trans\n",
-    "affine_matrix[:3, :3] = np.dot(np.dot(lps2ras, rot), lps2ras)\n",
-    "\n",
-    "affine_lps = load_ants_affine_mat(transform_path)\n",
-    "affine_sar = convert_lps_to_sar(affine_lps)\n",
-    "\n",
-    "print(\"Affine Matrix in SAR (RAS) orientation:\")\n",
-    "print(affine_lps)"
+    "transform = sitk.AffineTransform(transform)"
    ]
   },
   {
@@ -212,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -249,14 +222,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "3d157de1",
+   "execution_count": 115,
+   "id": "f6ffc347",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6N_R 1094.0601342371172 727.4380444525709 815.2287210162883\n",
+      "Sp5C_L 1312.8567281093078 767.5391947242181 644.2836263986424\n",
+      "DC_R 1126.8913248095107 632.707272357565 954.1008612233644\n",
+      "3N_L 927.1093117061387 686.2795967869974 765.5606040494722\n",
+      "Sp5O_L 1162.9467148292829 782.3008473902275 616.6763055802937\n",
+      "7N_L 1127.1758070498659 824.5471447417465 691.2343659955333\n",
+      "7N_R 1133.3783295273156 789.3326450823804 903.1212353992098\n",
+      "VLL_R 982.3766827537231 749.2400602248781 931.517292591833\n",
+      "LRt_L 1269.1869985464914 823.9310227610257 687.1269474546326\n",
+      "IC 994.7002880041568 557.9834351083751 736.1346175645481\n",
+      "SC 891.4378920823129 583.4998041839335 749.3539083422479\n",
+      "5N_R 1043.7920323224828 712.8965533795536 909.3412859819048\n",
+      "Amb_L 1192.3149100104638 803.102758519711 673.0957291646271\n",
+      "6N_L 1088.3509977196734 736.8686256017545 755.6727961150157\n",
+      "SNR_R 900.50746624086 742.0660048358873 919.1750671776339\n",
+      "4N_R 961.5869484261254 672.6816664621584 795.1488888661459\n",
+      "SNC_R 875.08573318166 748.6784679925111 916.3676758109971\n",
+      "SNC_L 883.8038254469845 801.0329171244672 692.6415297091609\n",
+      "SNR_L 908.9336823146107 794.3554932910474 670.9714310915848\n",
+      "7n_R 1083.933221428244 739.3145643793562 882.1453465039971\n",
+      "Sp5I_R 1244.1484602442897 693.7510196411907 931.6804932999462\n",
+      "RtTg 990.9232907597918 801.78435801292 801.4030236957562\n",
+      "Sp5O_R 1170.7079396625052 710.7489427480228 935.9335230121637\n",
+      "PBG_R 957.5884474646487 621.3682581779105 941.3128784585613\n",
+      "LC_L 1051.358071762009 704.9277574310881 695.8098720305279\n",
+      "PBG_L 956.3809543655298 693.0595761240535 596.525190084886\n",
+      "Amb_R 1198.6318307109302 761.0627555005781 900.2198910769604\n",
+      "LRt_R 1267.4770464463345 775.7387410077697 888.2058851169635\n",
+      "4N_L 961.4923762562582 681.9711853733772 752.4643605214973\n",
+      "7n_L 1077.691156017172 782.6267041355095 691.1463512212862\n",
+      "AP 1245.454626305926 706.1024564615453 764.9797479360311\n",
+      "DC_L 1125.1432304748723 728.9078709405917 563.5027366100114\n",
+      "VLL_L 982.8084960328706 809.5538207496343 661.3938925991979\n",
+      "LC_R 1056.0402897254069 673.5707440841318 844.9234099977107\n",
+      "Sp5I_L 1236.6205595067477 771.2858659066258 609.4230107227146\n",
+      "3N_R 926.8897248029925 681.9261302490947 790.6317281240694\n",
+      "5N_L 1043.94765399317 767.4810524029374 657.6650379041957\n",
       "RMS 310.6474257036656\n"
      ]
     }
@@ -271,6 +281,7 @@
     "    #transformed = affine_transform_point(moving0, affine_lps)\n",
     "\n",
     "    z,y,x = transform.TransformPoint((z,y,x))\n",
+    "    print(structure, x,y,z)\n",
     "    transformed = (x,y,z)\n",
     "    difference = [a - b for a, b in zip(transformed, fixed0)]\n",
     "    ss = sum_square_com(difference)\n",
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -293,6 +304,7 @@
      "output_type": "stream",
      "text": [
       "MD594 SC non trans [1119.  385.  517.]\n",
+      "MD594 SC apply ants x=1173.0619128060061, y=658.8957529716374 z=596.1139962470623\n",
       "MD594 SC apply trans [913. 229. 567.]\n",
       "Allen SC [914. 239. 569.]\n",
       "MD594->Allen SC [ -1. -10.  -2.]\n"
@@ -312,6 +324,12 @@
     "#com = [1095, 392, 519]\n",
     "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
     "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
+    "x,y,z = com\n",
+    "z,y,x = transform.TransformPoint((z,y,x))\n",
+    "x,y,z = transform.TransformPoint((x,y,z))\n",
+    "\n",
+    "print(f'{moving_name} {structure} apply ants {x=}, {y=} {z=}')\n",
+    "\n",
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
@@ -843,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f057f230",
+   "id": "a16bac17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2808c3d",
+   "id": "b163bb2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acf5e14",
+   "id": "dd6f3984",
    "metadata": {},
    "outputs": [],
    "source": []
