Fixed a typo in volume registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -144,17 +144,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "edccf6f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "itk::simple::AffineTransform\n",
+      " AffineTransform (0x5d1bd46d15e0)\n",
+      "   RTTI typeinfo:   itk::AffineTransform<double, 3u>\n",
+      "   Reference Count: 1\n",
+      "   Modified Time: 703\n",
+      "   Debug: Off\n",
+      "   Object Name: \n",
+      "   Observers: \n",
+      "     none\n",
+      "   Matrix: \n",
+      "     0.986549 -0.218002 0.103984 \n",
+      "     0.229206 1.17622 0.00316312 \n",
+      "     -0.0745162 0.00826388 1.14064 \n",
+      "   Offset: [-182.23, -475.044, 148.324]\n",
+      "   Center: [1041.58, 539.235, 443.876]\n",
+      "   Translation: [-267.639, -139.88, 137.591]\n",
+      "   Inverse: \n",
+      "     0.965242 0.179521 -0.0884922 \n",
+      "     -0.188267 0.815184 0.0149024 \n",
+      "     0.0644218 0.0058219 0.870814 \n",
+      "   Singular: 0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.io import loadmat\n",
     "reg_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'\n",
-    "transform_file = 'MD594_Allen_10.0x10.0x10.0um_sagittal_to_Allen.mat'\n",
+    "transform_file = 'MD594_Allen_10.0x10.0x10.0um_Affine_inverse.mat'\n",
     "transform_path = os.path.join(reg_path, moving_name, transform_file)\n",
     "transform = sitk.ReadTransform(transform_path)\n",
-    "transform = sitk.AffineTransform(transform)"
+    "transform = sitk.AffineTransform(transform)\n",
+    "print(transform)"
    ]
   },
   {
@@ -241,8 +271,8 @@
     "    fixed0 = np.array(fixed_all[structure]) \n",
     "    transformed = affine_transform_point(moving0, transformation_matrix)\n",
     "\n",
-    "    #z,y,x = transform.TransformPoint((z,y,x))\n",
-    "    #print(structure, x,y,z)\n",
+    "    z,y,x = transform.TransformPoint((z,y,x))\n",
+    "    print(structure, x,y,z)\n",
     "    #transformed = (x,y,z)\n",
     "    difference = [a - b for a, b in zip(transformed, fixed0)]\n",
     "    ss = sum_square_com(difference)\n",
@@ -256,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -268,7 +298,8 @@
       "MD594 SC apply ants x=1119.232944161371, y=384.50369985453443 z=516.5074759237448\n",
       "MD594 SC apply trans [913. 229. 567.]\n",
       "Allen SC [914. 239. 569.]\n",
-      "MD594->Allen SC [ -1. -10.  -2.]\n"
+      "MD594->Allen SC [ -1. -10.  -2.]\n",
+      "891.8336781190726 235.38485662399034 657.2480214180418\n"
      ]
     }
    ],
@@ -292,7 +323,11 @@
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-    "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')\n"
+    "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')\n",
+    "\n",
+    "x,y,z = com\n",
+    "x,y,z = transform.TransformPoint(com)\n",
+    "print(x,y,z)\n"
    ]
   },
   {
