Added a new plot for error visualization in notebooks

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -111,10 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'MD594'\n",
+    "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = list_coms(moving_name, scaling_factor=10)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=10)\n",
+    "moving_all = fetch_coms(moving_name, scaling_factor=1)\n",
+    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
@@ -176,45 +176,13 @@
     "    df_list.append(row)\n",
     "    error.append(ss)\n",
     "    transformed_dict[structure] = transformed\n",
-    "print('RMS', sum(error)/len(df_list))\n",
+    "rms = sum(error)/len(df_list)\n",
+    "print(f'RMS: {rms} observations: {len(df_list)}')\n",
     "# MD589 to Allen RMS 260.0211852431133\n",
     "# MD585 to Allen RMS 263.314352291951\n",
     "# MD594 to Allen RMS 250.79820210419254\n",
     "# AtlasV8 DB to Allen RMS 238.5831606646421\n",
     "# MD585 to MD589 RMS 18.2658167690059"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f451840",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transformed_elastix = {'10N_L': (1245.825565, 583.011918, 541.248353), '10N_R': (1241.078327, 575.816747, 604.932277), '12N': (1234.494263, 599.28526, 571.130307), '3N_L': (916.08634, 393.30332, 556.006873), '3N_R': (915.61113, 395.207295, 587.248926), '4N_L': (954.697061, 397.285593, 544.243496), '4N_R': (955.039712, 398.093118, 598.067921), '5N_L': (1018.137495, 520.533489, 409.881654), '5N_R': (1019.341376, 525.263033, 727.129661), '6N_L': (1068.668552, 527.691811, 539.596871), '6N_R': (1073.775168, 536.06989, 613.966415), '7N_L': (1083.300099, 645.703034, 437.587277), '7N_R': (1087.207846, 667.340715, 701.69945), '7n_L': (1045.956409, 566.507496, 447.340355), '7n_R': (1054.223742, 570.088494, 689.160729), 'AP': (1244.090532, 552.686906, 571.760582), 'Amb_L': (1160.638022, 636.809303, 427.495323), 'Amb_R': (1165.984467, 653.856579, 711.948937), 'DC_L': (1123.751951, 469.786863, 315.849668), 'DC_R': (1131.744401, 461.873771, 812.028033), 'IC': (1034.298923, 232.223501, 566.79765), 'LC_L': (1045.189532, 448.35284, 475.846568), 'LC_R': (1050.580737, 454.508383, 663.837542), 'LRt_L': (1233.211435, 702.321565, 443.053938), 'LRt_R': (1234.112904, 699.030951, 697.872942), 'PBG_L': (956.449566, 360.380351, 354.569236), 'PBG_R': (958.509989, 371.76958, 788.302734), 'Pn_L': (895.19021, 624.89548, 501.952816), 'Pn_R': (894.018076, 634.206201, 645.330084), 'RMC_L': (888.025505, 450.25689, 511.06366), 'RMC_R': (884.667685, 457.312469, 622.186793), 'RtTg': (940.155521, 592.96321, 566.352029), 'SC': (915.771574, 229.443045, 566.999621), 'SNC_L': (835.409636, 512.465283, 429.363112), 'SNC_R': (828.798088, 507.753302, 711.989699), 'SNR_L': (865.722722, 506.533869, 407.481066), 'SNR_R': (857.665458, 509.930588, 719.266855), 'Sp5C_L': (1301.972326, 627.651522, 413.166233), 'Sp5C_R': (1298.198967, 619.19027, 728.645978), 'Sp5I_L': (1222.916041, 590.080036, 364.984897), 'Sp5I_R': (1235.268962, 588.638673, 774.199137), 'Sp5O_L': (1141.028347, 577.329771, 364.832388), 'Sp5O_R': (1151.739201, 583.391376, 768.576876), 'Tz_L': (983.843401, 656.759861, 508.510555), 'Tz_R': (986.412422, 666.944614, 626.51371), 'VCA_L': (1048.046155, 509.507162, 297.514027), 'VCA_R': (1061.438954, 507.154848, 860.320689), 'VCP_L': (1095.838599, 548.173446, 299.199061), 'VCP_R': (1115.532484, 526.161194, 846.116132), 'VLL_L': (938.78711, 555.30814, 396.500515), 'VLL_R': (940.407198, 557.855505, 737.535395)}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "948edd20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_list = []\n",
-    "error = []\n",
-    "transformed_dict = {}\n",
-    "for structure in common_keys:\n",
-    "    transformed = transformed_elastix[structure]\n",
-    "    fixed0 = np.array(fixed_all[structure]) \n",
-    "    difference = [a - b for a, b in zip(transformed, fixed0)]\n",
-    "    ss = sum_square_com(difference)\n",
-    "    row = [structure, np.round(moving0), np.round(fixed0), \n",
-    "           np.round(transformed), np.round(difference), ss]\n",
-    "    df_list.append(row)\n",
-    "    error.append(ss)\n",
-    "    transformed_dict[structure] = transformed\n",
-    "print('RMS', sum(error)/len(df_list))\n"
    ]
   },
   {
@@ -236,16 +204,10 @@
     "#com = [1095, 392, 519]\n",
     "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
     "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
-    "x,y,z = com\n",
-    "\n",
-    "print(f'{moving_name} {structure} apply ants {x=}, {y=} {z=}')\n",
     "\n",
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-    "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')\n",
-    "elastix_com = np.array([915, 230, 568])\n",
-    "diff = elastix_com - np.array(fixed_all[structure])\n",
     "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')"
    ]
   },
@@ -265,6 +227,21 @@
     "df.sort_values(by=['sumsquares'], inplace=True)\n",
     "#df.to_csv('/home/eddyod/programming/pipeline/docs/sphinx/source/_static/results.csv', index=False)\n",
     "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3e03b99",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30, 5)) \n",
+    "plt.axhline(y=rms, linestyle='--', linewidth=2, color='red', label='Mean')\n",
+    "plt.text(0, rms, f\"Mean RMS={round(rms,2)}\")\n",
+    "plt.bar(df['structure'], df['sumsquares'])"
    ]
   },
   {
